--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
     "@angular/router": "~13.2.0",
     "bootstrap": "^5.2.3",
     "firebase": "^9.14.0",
+    "jquery": "^3.6.0",
     "ngx-spinner": "^13.1.1",
     "ngx-toastr": "^14.3.0",
+    "popper.js": "^1.16.1",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
@@ -32,6 +34,7 @@
     "@angular/cli": "~13.2.5",
     "@angular/compiler-cli": "~13.2.0",
     "@types/jasmine": "~3.10.0",
+    "@types/jquery": "^3.5.9",
     "@types/node": "^12.11.1",
     "jasmine-core": "~4.0.0",
     "karma": "~6.3.0",
